--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/ncountry
+spring.datasource.
+spring.datasource.url=jdbc:mysql://localhost:3307/ncountry
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=adriel132004
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #FILES
@@ -11,4 +12,3 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jpa.open-in-view=true
 #JPA
 spring.jpa.hibernate.ddl-auto=update
-
