--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,13 +1,7 @@
-#DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/ncountry
 spring.datasource.username=root
-spring.datasource.password=root
-#DRIVER
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#FILES
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-#DOC
-spring.jpa.open-in-view=true
-#JPA
+#spring.jpa.show-sql: true
+logging.level.org.springframework.data.jpa=DEBUG
 spring.jpa.hibernate.ddl-auto=update
